Removed borders; fixed title panel to be visible over land; adjusted width of charts to make sure they fit

--- a/java/com.sap.sailing.gwt.ui/RaceBoard.css
+++ b/java/com.sap.sailing.gwt.ui/RaceBoard.css
@@ -418,17 +418,22 @@ img.openColumn {
 
 .raceBoard-TitlePanel {
 	position: relative;
-	top: 5px;
+	top: 10px;
 	z-index: 10;
-	color: white;
+	color: black;
 	margin-left: auto;
 	margin-right: auto;
-	opacity: .8;
+	opacity: .6;
+	border-radius: 6px;
+	border: none;
+	background-color: white;
+	height: 55px;
 }
 
 .raceBoard-TitlePanel-RaceNameLabel {
 	font-size: 28px;
-	padding: 7px;
+	font-weight: bold;
+	padding: 3px;
 }
 
 .raceBoard-Logo {
@@ -472,13 +477,17 @@ img.openColumn {
 	outline: 0 !important;
 }
 
+.RaceBoard-globalNavigation {
+	padding: 0px 25px;
+}
+
 .RaceBoard-globalNavigation-Link {
 	display: inline;
 	margin-right: 3px;
 }
 
 .RaceBoard-globalNavigation-Link a {
-	color: white;
+	color: black;
 	cursor: pointer;
 }
 
