--- a/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/ui/leaderboard/CompetitorFilter.css
+++ b/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/ui/leaderboard/CompetitorFilter.css
@@ -9,7 +9,7 @@
 	margin-right: 0px;
 	font-size: 1rem;
 	position: relative;
-	border-bottom: 1px solid #ccc;
+	border: 1px solid #ccc;
 	overflow: hidden;
 }
 
